Bug 294619 - kcminit not installed in Meego and Mer images causes 20s delays ksmserver startup
Summary: kcminit not installed in Meego and Mer images causes 20s delays ksmserver sta...
Status: RESOLVED FIXED
Alias: None
Product: Active
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Meego/Harmattan Linux
: NOR normal
Target Milestone: unscheduled
Assignee: active
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-22 15:14 UTC by Lamarque V. Souza
Modified: 2012-02-27 22:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lamarque V. Souza 2012-02-22 15:14:24 UTC
Version:           unspecified (using KDE 4.8.0) 
OS:                Linux

kcminit is not installed in Meego and Mer images, at least in the images created by basysKom. Ksmserver tries to contact kcminit through dbus during startup with a 10s timeout, which is always reached according to a debug messages in ~/.xsession-errors. After the first 10s timeout kcmserver, launches klauncher and tries to contact kcminit again with another 10s timeout, which is also reached. In the end ksmserver has a 20s startup because of that.

This can also be the cause of some the problems we have with klauncher and dbus since we started to use startactive. That can also be the cause of two kded running during startup.

Reproducible: Always

Steps to Reproduce:
1. Enable debug messages using kdebugdialog.
2. Reboot the system.
3. Check the messages like "ksmserver(439) KSMServer::kcmPhase1Timeout: Kcminit phase 1 timeout" and "ksmserver(439) KSMServer::kcmPhase2Timeout: Kcminit phase 2 timeout" in ~/.xsession-errors.

Actual Results:  
ksmserver starts with a 20s delay, klauncher is started by ksmserver with a 10s delay. Maybe those delays causes the problems with dbus and klauncher too, or even with kded frozen sometimes.

Expected Results:  
No delay in ksmserver and klauncher startups.

kcminit seems disabled in all Meego and Mer images, maybe because of the mobile profile used to compile kde-workspace.
Comment 1 Lamarque V. Souza 2012-02-27 22:10:05 UTC
Git commit 93fc655c1f749f4405d448e71b51294787202ecb by Lamarque V. Souza.
Committed on 27/02/2012 at 23:08.
Pushed by lvsouza into branch 'master'.

Make ksmserver do not wait for kcminit if it is not running.

REVIEW: 104051

M  +32   -11   ksmserver/startup.cpp

http://commits.kde.org/kde-workspace/93fc655c1f749f4405d448e71b51294787202ecb