Make ksmserver do not wait for kcminit if it is not running.

REVIEW: 104051
BUG: 294619